Mise A Jour 1 (MAJ1)

--- a/accueil.html
+++ b/accueil.html
@@ -9,9 +9,9 @@
     </header>
 
     <body>
-        <p>
-            <button type="button">Profile</button>
-        </p>
+        <div>
+            <a href="profile.php">Profile</a>
+        </div>
 
         <p>
             <center>
