--- a/accueil.html
+++ b/accueil.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="search.html">Search</a>
+                        <a href="search.php">Search</a>
                     </li>
     
                     <li>
@@ -25,7 +25,7 @@
                     </li>
                 </ul>
             </nav>
-            
+
         </header>
 
         <div>
