Mise A Jour 1.7 (MAJ1.7)

--- a/hikeplanner_map.html
+++ b/hikeplanner_map.html
@@ -94,6 +94,7 @@
 					for (let i = 0; i < customWaypointsLatLng.length; i++) {
 						saveUrl += ('&lng=' + customWaypointsLatLng[i].lng);
 					}
+					document.location.href = saveUrl;
 					console.log(saveUrl);
 				});
 				
